# cli_kit

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .replit  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml  rust.yml
docs/: SourceSerifPro-LICENSE.md  aliases.js  main.js  rustdoc.css  search-index.js  settings.html  settings.js  source-files.js  source-script.js  storage.js  theme.js
docs/cli_kit/: all.html  index.html  sidebar-items.js
docs/cli_kit/ansi/: index.html  sidebar-items.js
docs/cli_kit/ansi/color_codes/: fn.blue.html  fn.blue_bold.html  fn.cyan.html  fn.green.html  fn.green_bold.html  fn.magenta.html  fn.red.html  fn.red_bold.html  fn.yellow.html  fn.yellow_bold.html  index.html  sidebar-items.js  trait.ToString.html
docs/cli_kit/ansi/cursor/: fn.hide_cursor.html  fn.show_cursor.html  index.html  sidebar-items.js
docs/implementors/cli_kit/ansi/color_codes/: trait.ToString.js
docs/src/cli_kit/: lib.rs.html
docs/src/cli_kit/ansi/: color_codes.rs.html  cursor.rs.html  mod.rs.html
examples/: colors.rs  hi.rs  lexed_syntax.rs
src/: lib.rs
src/ansi/: color_codes.rs  cursor.rs  mod.rs
tests/: test.rs
